# rep

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
deploy/: install-lxc.sh  rep-server.service  rep-update.service  rep-update.sh  rep-update.timer
docs/: api-idclass.md  api_idclass_latest.webarchive
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  collector.rs  config.rs  idclass.rs  lib.rs  main.rs  server.rs  state.rs  sync.rs  updater.rs
src/lib/: api.ts
src/pages/: Config.tsx  Login.tsx  Logs.tsx  Status.tsx
tmp/: idclass-load-users-auth-probe.json  idclass-load-users-ok.json  idclass-load-users-raw.json  idclass-users-endpoint-probe.json  idclass-users-raw.json  idclass-users-summary.json
