[package]
name = "ryanne-ponto"
version = "0.1.0"
description = "Ryanne Ponto Agent - Desktop app for syncing time records"
authors = ["Ryanne"]
edition = "2021"

[lib]
name = "ryanne_ponto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "unwind"
