[package]
name = "ryanne-ponto"
version = "1.0.20"
description = "Ryanne Ponto Agent - Desktop app and headless service for syncing time records"
authors = ["Ryanne"]
edition = "2021"
default-run = "ryanne-ponto"

[lib]
name = "ryanne_ponto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rep-server"
path = "src/bin/rep-server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"
# Headless server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "unwind"
